fixed the hero overflow issue, added another hero

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,36 @@
   max-width: 100%;
   box-sizing: border-box;
   display: flex;
+  overflow-x: hidden;
 }
 
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: white;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.swiper-button-next {
+  right: 8%;
+}
+
+.swiper-button-prev {
+  left: 4%;
+}
+
+@media (min-width: 768px) {
+  .swiper-button-next {
+    right: 2%;
+  }
+
+  .swiper-button-prev {
+    left: 2%;
+  }
 }
